# typeoverride

./: README.md  pyproject.toml
typeoverride/: decorator.py  example.py  method_decorator.py  result.py
