[tool.poetry]
name = "typeoverride"
version = "0.1.0"
description = ""
authors = ["Hector Hanshew <github@hectorhw.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
ruff = "^0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
